--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Carrie Prebble",
   "license": "MIT",
   "scripts": {
-	"build": "babel src/server.js",
-	"dev": "NODE_ENV=development babel-node src/server.js",
+    "build": "babel src/server.js",
+    "dev": "NODE_ENV=development nodemon src/server.js --exec babel-node",
     "start": "yarn build && node src/server.js",
     "test": "mocha --recursive test/unit",
     "lint": "eslint \"src/**/*.js\"",
@@ -22,6 +22,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "graphql-relay": "^0.5.4",
+    "pg": "^7.4.1",
     "request": "2.81.0",
     "request-promise": "4.2.0"
   },
@@ -32,7 +33,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-standard": "^3.0.1"
+	"eslint-plugin-standard": "^3.0.1",
+	"nodemon": "^1.17.1"
   },
   "babel": {
     "presets": [
