allow template strings, harden prod build, start implementing tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,10 +16,11 @@
         "linebreak-style": [
             "error",
             "unix"
-        ],
+		],
         "quotes": [
             "error",
-            "double"
+			"double",
+			{ "allowTemplateLiterals": true }
         ],
         "semi": [
             "error",
