--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "author": "Carrie Prebble",
   "license": "MIT",
   "scripts": {
-    "build": "babel src/server.js",
+    "build": "babel src -d dist",
     "dev": "NODE_ENV=development nodemon src/server.js --exec babel-node",
-    "start": "yarn build && node src/server.js",
-    "test": "mocha --recursive test/unit",
+	"start": "node dist/server.js",
+	"test": "mocha --require test/mocha-setup.js \"src/**/*.spec.{js}\"",
+	"test-watch": "mocha --require test/mocha-setup.js \"src/**/*.spec.{js}\" --watch --watch-extensions js",
     "lint": "eslint \"src/**/*.js\"",
     "lint-fix": "eslint --fix \"src/**/*.js\""
   },
@@ -22,24 +23,26 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "graphql-relay": "^0.5.4",
-    "pg": "^7.4.1",
-    "request": "2.81.0",
-    "request-promise": "4.2.0"
+    "pg": "^7.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.2",
+	"babel-eslint": "^7.2.2",
+	"babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0-beta.0",
-	"eslint-plugin-standard": "^3.0.1",
-	"nodemon": "^1.17.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "nodemon": "^1.17.1"
   },
   "babel": {
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "transform-runtime"
     ]
   }
 }
