--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
 	"extends": "eslint:recommended",
 	"env": {
-		"node": true
+		"node": true,
+		"mocha": true,
+		"es6": true
 	},
 	"parser": "babel-eslint",
 	"parserOptions": {
