--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "build": "babel src -d dist",
     "dev": "NODE_ENV=development nodemon src/server.js --exec babel-node",
-	"start": "node dist/server.js",
-	"test": "mocha --require test/mocha-setup.js \"src/**/*.spec.{js}\"",
-	"test-watch": "mocha --require test/mocha-setup.js \"src/**/*.spec.{js}\" --watch --watch-extensions js",
+    "start": "node dist/server.js",
+    "test": "mocha --require test/mocha-setup.js \"src/**/*.spec.js\"",
+    "test-watch": "mocha --require test/mocha-setup.js \"src/**/*.spec.js\" --watch --watch-extensions js",
     "lint": "eslint \"src/**/*.js\"",
     "lint-fix": "eslint --fix \"src/**/*.js\""
   },
@@ -27,14 +27,17 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-	"babel-eslint": "^7.2.2",
-	"babel-plugin-transform-runtime": "^6.23.0",
+    "babel-eslint": "^7.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+	"babel-preset-stage-0": "^6.24.1",
+	"chai": "^4.1.2",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.17.1"
+	"eslint-plugin-standard": "^3.0.1",
+	"mocha": "^5.0.2",
+	"nodemon": "^1.17.1",
+	"sinon": "^4.4.2"
   },
   "babel": {
     "presets": [
