--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Carrie Prebble",
   "license": "MIT",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "rm -rf dist && yarn lint && yarn test && babel src -d dist",
     "dev": "NODE_ENV=development nodemon src/server.js --exec babel-node",
     "start": "node dist/server.js",
     "test": "mocha --require test/mocha-setup.js \"src/**/*.spec.js\"",
